<?xml version="1.0"?>
<package format="2">
  <name>gmapping</name>
  <version>1.4.2</version>
  <description>This package contains a ROS wrapper for OpenSlam's Gmapping. 
  The gmapping package provides laser-based SLAM (Simultaneous Localization and Mapping), 
  as a ROS node called slam_gmapping. Using slam_gmapping, you can create a 2-D occupancy
  grid map (like a building floorplan) from laser and pose data collected by a mobile robot.
  </description>
  <author>Brian Gerkey</author>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <license>BSD</license>
  <license>Apache 2.0</license>

  <url>http://ros.org/wiki/gmapping</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>openslam_gmapping</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>tf</depend>
  <depend>nodelet</depend>
  <depend>rosbag_storage</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
